--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,6 @@
 *.c linguist-detectable=false
 *.cpp linguist-detectable=false
-*.cmake linguist-detectable=false
+*.cxx linguist-detectable=false
+*.so linguist-detectable=false
+*.slo linguist-detectable=false
+pubspec.yml linguist-language=flutter
