--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,12 @@
 *.c linguist-detectable=false
+*.cc linguist-detectable=false
 *.cpp linguist-detectable=false
 *.cxx linguist-detectable=false
 *.so linguist-detectable=false
 *.slo linguist-detectable=false
-pubspec.yml linguist-language=flutter
+*.pb.h linguist-detectable=false
+*.h linguist-detectable=false
+*.pb.c linguist-detectable=false
+*.pb.cc linguist-detectable=false
+*.o linguist-detectable=false
+
