--- a/.gitattributes
+++ b/.gitattributes
@@ -10,4 +10,7 @@
 *.pb.cc linguist-detectable=false
 *.o linguist-detectable=false
 
-lib/** linguist-vendored
+windows/** linguist-vendored
+linux/** linguist-vendored
+macos/** linguist-vendored
+android/** linguist-vendored
