--- a/.gitattributes
+++ b/.gitattributes
@@ -1,16 +1,6 @@
-*.c linguist-detectable=false
-*.cc linguist-detectable=false
-*.cpp linguist-detectable=false
-*.cxx linguist-detectable=false
-*.so linguist-detectable=false
-*.slo linguist-detectable=false
-*.pb.h linguist-detectable=false
-*.h linguist-detectable=false
-*.pb.c linguist-detectable=false
-*.pb.cc linguist-detectable=false
-*.o linguist-detectable=false
-
 windows/** linguist-vendored
 linux/** linguist-vendored
 macos/** linguist-vendored
 android/** linguist-vendored
+ios/** linguist-vendored
+*.dart linguist-vendored=false
